# AuroraTracker-IGSTK

./: CMakeLists.txt  CTestConfig.cmake  IGSTKConfig.cmake.in  README.md  igstkConfigure.h.in  igstkIncludeDirectories.cmake
Source/: CMakeLists.txt  igstkNDIClassicTracker.cxx
Utilities/: CMakeLists.txt
